# santa_service_app

./: Cargo.toml  README.md
client/: README.md
client/src/: console_interaction.rs  urls_generator.rs
migrations/2023-01-04-180937_create_santa_table/: down.sql
server/: .env  Cargo.toml
server/migrations/2023-01-04-180244_create_users/: up.sql
server/migrations/2023-01-04-180325_create_groups/: up.sql
server/migrations/2023-01-04-180937_create_santa_table/: up.sql
server/migrations/2023-01-05-134907_create_user_group_table/: down.sql  up.sql
server/src/: errors.rs  handlers.rs  insertables.rs  messages.rs  models.rs  schema.rs  secondary_functions.rs
src/: actions.rs  actors.rs  console.rs  console_interaction.rs  errors.rs  generator.rs  handlers.rs  insertables.rs  lib.rs  main.rs  messages.rs  models.rs  schema.rs  secondary_functions.rs  server_interaction.rs  services.rs  structures.rs  urls_generator.rs
