[package]
name = "santa_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
chrono = "0.4.23"
rand = "0.8.5"